[Gold V] Title: 컨베이어 벨트 위의 로봇, Time: 412 ms, Memory: 22364 KB -BaekjoonHub